# rust-wasm-lunatic-nats

./: .env.template  .gitignore  BROWSER-BASE.MD  Cargo.toml  README.md  WASM_LLM_BRIDGE_IMPLEMENTATION.md  scraping_config.json
.claude/: settings.local.json
.claude/commands/: execute-prp.md  generate-prp.md
PRPs/: LLM-Augmented-Distributed-Agent-System.md
docs/: ARCHITECTURE.md  MEDIUM.MD  WASM_NATS_GUIDE.md
examples/: distributed_scraping.rs  real_scraping_demo.rs  sample_agent.rs
src/: agent.rs  lib.rs  llm_client.rs  main.rs  memory.rs  nats_comm.rs  supervisor.rs  wasm_nats.rs
tests/: integration_tests.rs
