[package]
name = "rust-wasm-lunatic-nats"
version = "0.1.0"
edition = "2021"
description = "A Rust/WASM application using Lunatic and NATS for distributed agent-based systems"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/srnarasim/rust-wasm-lunatic-nats"
readme = "README.md"
keywords = ["wasm", "lunatic", "nats", "distributed-systems"]
categories = ["wasm", "distributed-computing"]

[features]
default = ["nats", "logging"]
logging = ["dep:simple_logger"]
persistence = []
nats = ["dep:async-nats", "dep:tokio", "dep:env_logger"]
wasm-only = []
wasm-nats = ["dep:ws_stream_wasm", "dep:web-sys", "dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
lunatic = { version = "0.14", features = ["json_serializer"] }
async-nats = { version = "0.42.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = { version = "0.10", optional = true }
simple_logger = { version = "4.3", default-features = false, optional = true }
async-trait = "0.1"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1.0"
base64 = "0.21"

# WASM-specific WebSocket dependencies
ws_stream_wasm = { version = "0.7", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "rust-wasm-lunatic-nats"
path = "src/main.rs"

[lib]
name = "rust_wasm_lunatic_nats"
path = "src/lib.rs"
crate-type = ["cdylib"]  # For WASM compilation

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace]
members = [
    ".",
    # Add workspace members here if needed
]
